BuildHughes/translation-tool/inputs/source_meta/objects/Product_Attribute__c.object
<CustomObject>
    <description>used to define the value of an attribute for a given product:</description>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Name</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Product Attributes</relationshipLabel>
        <relationshipName>Product_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Attribute</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attributes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>